<resources>
    <string name="app_name">The spy game</string>
    <string name="Game">Game:</string>
    <string name="Nickname">Name:</string>
    <string name="Player"></string>
    <string name="NoSpy">You are NOT the spy</string>
    <string name="Spy">You are the spy!</string>
    <string name="Location" formatted="false">You are %s %s</string>
    <string name="Players">Players:</string>
    <string name="Status">Status %s</string>
    <string name="NoInternet">No internet connetion</string>
    <string name="TimeZero">00:00</string>
    <string name="StatusUnknown">Status Unknown</string>
    <string name="AvailableGames">Available games</string>
    <string name="NoGamesAvailable">No games available</string>
    <string name="NameMustNotBeEmpty">Name for the game must not be empty</string>
    <string name="NicknameMustNotBeEmpty">Nickname for the player must not be empty</string>
    <string name="CheckingVersion">Checking app version...</string>
    <string name="UpdateNeeded">Your app is outdated. Go to the play store and install the latest version of \'The Spy Game\'</string>
    <string name="FromTo" formatted="false">From %s to %s</string>
    <string name="Chat">Chat</string>
    <string name="TypeChatMessage">Message:</string>
    <string name="MessageTo">Message to:</string>
    <string name="NoOneToChat">There is no one to chat with</string>
    <string name="Locations">Locations</string>
    <string name="Rules">Rules</string>
    <string name="Settings">Settings</string>
    <string name="GameInfo" formatted="false">%s (%s), %s, %d players</string>
    <string name="TimeFormat" formatted="false">%02d:%02d</string>
    <string name="OK">OK</string>
    <string name="RulesTitle">The rules of the game</string>
    <string name="RulesTxt"><b><i>The Spy Game</i></b> is a fun game for 3 to 9 players.
        \n\nIf you have a Chromecast, the first thing you should do is push the cast button. The status of the game will be displayed on your TV!
        \n\nIn \'The Spy Game\', one of the players is the <b>spy</b> and the others have to guess who that is.
        \nThe <b>spy</b> on the other hand has to guess where the other players are situated.
        \n\nThis is done by asking questions to each other. Player 1 asks a question to player 2 and when player 2 has answered, it\'s his turn to ask a question.
        \nA player is not allowed to ask a question to the player that asked the question in the previous turn.
        \n\nTo create a game, use the \'<b>plus</b>\' button, then when all players are joined (\'<b>join</b>\' button) and all players are ready (\'<b>ready switch</b>\') the game starts.
        \n\nAny player who thinks he knows the answer can flip his \'<b>ready switch</b>\'. The game ends when the timer reaches 00:00 or when all players are ready (\'<b>ready switch</b>\').
        \n\nTo <b>chat</b> to another player press the button with the player name in it or use the \'<b>chat</b>\' button.
        \n\nThere is a <b>time limit</b> for each round. After the game has been started a countdown counter shows the playing time left.
        \n\nWhen the counter reaches <b>00:00</b> or someone has ended the game it\'s time to speak out.
        \nYou have 30 seconds to answer. Each correct answers earns you 1 point.
</string>
    <string name="LocationsTitle">Possible locations</string>
    <string name="CountryUnknown">Country unknown</string>
    <string name="WhereAreWe">Where are we?</string>
    <string name="WhoIsSpy">Who is the spy?</string>
    <string name="Scoreboard">Scoreboard</string>
    <string name="Pos">Pos</string>
    <string name="Name">Name</string>
    <string name="Role">Role</string>
    <string name="ThisRound">+</string>
    <string name="Total">Total</string>
    <string name="Answer">Answer</string>
    <string name="ResultWait" formatted="false">Waiting for answers of %s players</string>
    <string name="SpyResult" formatted="false">The spy is: %s</string>
    <string name="LocationResult" formatted="false">The location is: %s</string>
    <string name="Ranking">Ranking</string>
    <string name="appMenu">App menu</string>
    <string name="media_route_menu_title">Cast to</string>
    <string name="cast_app_id">7051341A</string>
    <string name="cast_namespace">urn:x-cast:nl.whitedove.thespygame</string>
    <string name="TheSpy">The Spy</string>
    <string name="PrivacyTitle">Privacy policy</string>
    <string name="PrivacyTxt">Loading privacy text ...</string>
    <string name="Privacy">Privacy policy</string>
    <string name="ErrorLoadingPrivacy">Error loading privacy policy</string>
    <string name="ReadyToStart" formatted="false">Ready to start?</string>
    <string name="ReadyToStartNew">Ready for new game?</string>
    <string name="ReadyPercent" formatted="false">(%s/%s ready)</string>
    <string name="ReadyToFinish" formatted="false">Ready to finish?</string>
    <string name="no">N</string>
    <string name="yes">Y</string>
    <string name="Reset">Reset</string>
    <string name="ResetGame">Reset game</string>
</resources>
